# raytracer

./: CODE_OF_CONDUCT.md  Canvas.py  Cargo.toml  Gemfile  Intersection.py  LICENSE.txt  Light.py  Material.py  Matrix.py  README.md  Ray.py  Sphere.py  Translation.py  Tuple.py  cannon.py  out  raytracer.gemspec
exe/: raytracer
features/: canvas.feature  intersections.feature  lights.feature  materials.feature  matrices.feature  rays.feature  spheres.feature  transformations.feature  tuples.feature
features/step_definitions/: canvas_steps.rb  tuple_steps.rb
features/steps/: canvas.py  given.py  intersections.py  matrices.py  rays.py  spheres.py  then.py  transformations.py  tuple.py  when.py
lib/: raytracer.rb
lib/raytracer/: canvas.rb  tuple.rb  version.rb
src/: main.rs  other.rs  tuple.rs
tests/: cucumber.rs  steps.rs  tuple_tests.rs
tests/features/: encryptor.feature  tuples.feature
