[package]
name = "raytracer"
version = "0.1.0"
authors = ["Chris McIntosh <chocrates@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
float-cmp = "^0.8" # Gives us approx_eq macro for floats
regex = "*"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest

[dev-dependencies]
cucumber = { package = "cucumber_rust", version = "^0.7.0" }
async-trait = "^0.1"
futures = "^0.3" 
